--- a/src/templates/profile.html
+++ b/src/templates/profile.html
@@ -74,24 +74,31 @@
                     <hr>
                     <ul>
                         {% for stock in preferred_stocks %}
-                        <li>{{ stock.symbol }}
+                        <li>
+                            <div class="d-flex align-items-center">
+                            {{ stock.symbol }}
                             <div class="tooltip-css">
                             <a href="{{ url_for ('stocks_graph.render', stock=stock.symbol) }}" ><span class="tooltiptext-css">Show graph</span>
                             <span class="m-2"><i class="fas fa-chart-line link-button"></i></span></a>
                             </div>
                             <div class="tooltip-css">
                             <a href="{{ url_for ('stocks_news.get_news', stock=stock.symbol, username=username) }}"class="tooltip-css"><span class="tooltiptext-css">Show news</span><span class="m-2"><i class="fas fa-newspaper link-button"></i></span></a>
+                            </div>
+                            <form class="my-2" method="POST" action="{{ url_for('profile.remove_stocks_preferences', username=username) }}">
+                            <input type="hidden" name="stocks" value="{{ stock.symbol }}">
+                            <div class="tooltip-css">
+                            <button type="submit" class="tooltip-css" style="border: none; background: none; padding: 0;">
+                            <span class="tooltiptext-css">Remove</span>
+                            <span class="m-2"><i class="fas fa-trash"></i></span>
+                                </button>
+                              </div>
+                            </form>
+                            </div>
                         </li>
 
                         {% endfor %}
                     </ul>
                 </div>
-              <!-- <div class="col text-end"><a
-                    href="{{ url_for ('stocks_news.get_news', username=username) }}" class="ms-2 link-button">
-                    <i class="fas fa-newspaper ms-2"></i>
-                    Your news <i class="fas fa-angle-double-right"></i></a>
-                </div> -->
-            </div>
         </div>
     </div>
 </div>
